objects/ASI_eForm_Vendor_Form_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Archived_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Bank_A_C_Number__c</fullName>
        <label>Branch+Account Code(&quot;-&quot; do not require)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Bank_Address__c</fullName>
        <label>Bank Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Bank_Code__c</fullName>
        <inlineHelpText>System will auto assign a value based on the selected bank if you keep blank</inlineHelpText>
        <label>Bank Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Bank_Country_Code__c</fullName>
        <label>Bank Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA-ARUBA</fullName>
                </value>
                <value>
                    <fullName>AD-ANDORRA</fullName>
                </value>
                <value>
                    <fullName>AE-United Arab Emirates (UAE)</fullName>
                </value>
                <value>
                    <fullName>AF-AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>AG-ANTIQUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>AI-ANQUILLA</fullName>
                </value>
                <value>
                    <fullName>AL-ALBANIA</fullName>
                </value>
                <value>
                    <fullName>AM-Armenia</fullName>
                </value>
                <value>
                    <fullName>AN-Netherlands Antilles</fullName>
                </value>
                <value>
                    <fullName>AO-ANGLOA (INCLUDING CABINDA)</fullName>
                </value>
                <value>
                    <fullName>AQ-Antarctica</fullName>
                </value>
                <value>
                    <fullName>AR-ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>AS-American Samoa</fullName>
                </value>
                <value>
                    <fullName>AT-AUSTRIA(EX.JUNGHOLZ&amp;MITTEBLERG</fullName>
                </value>
                <value>
                    <fullName>AU-AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AW-Aruba</fullName>
                </value>
                <value>
                    <fullName>AZ-Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>BA-Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>BB-BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BD-BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BE-BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BF-Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>BG-BULGARIA</fullName>
                </value>
                <value>
                    <fullName>BH-BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BI-BURUNDI</fullName>
                </value>
                <value>
                    <fullName>BJ-BENIN</fullName>
                </value>
                <value>
                    <fullName>BK-BURKINA</fullName>
                </value>
                <value>
                    <fullName>BM-BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BN-BRUNEI</fullName>
                </value>
                <value>
                    <fullName>BO-BOLIVIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Bank__c</fullName>
        <label>Bank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUSTRALIA AND NEW ZEALAND BANKING GROUP LTD</fullName>
                </value>
                <value>
                    <fullName>BANK OF AMERICA, N.A.</fullName>
                </value>
                <value>
                    <fullName>BANK OF CHINA (HONG KONG) LIMITED</fullName>
                </value>
                <value>
                    <fullName>BANK OF CHINA (HONG KONG) LIMITED (Previously known as HUA CHIAO COMMERCIAL BANK LTD)</fullName>
                </value>
                <value>
                    <fullName>BANK OF CHINA (HONG KONG) LIMITED (Previously known as PO SANG BANK LTD.)</fullName>
                </value>
                <value>
                    <fullName>BANK OF CHINA (HONG KONG) LIMITED (Previously known as SIN HUA BANK LIMITED)</fullName>
                </value>
                <value>
                    <fullName>BANK OF CHINA (HONG KONG) LIMITED (Previously known as THE CHINA &amp; SOUTH SEA BANK LTD)</fullName>
                </value>
                <value>
                    <fullName>BANK OF CHINA (HONG KONG) LIMITED (Previously known as THE CHINA STATE BANK LTD)</fullName>
                </value>
                <value>
                    <fullName>BANK OF CHINA (HONG KONG) LIMITED (Previously known as YIEN YIEH COMMERCIAL BANK LTD)</fullName>
                </value>
                <value>
                    <fullName>BANK OF COMMUNICATIONS CO. LTD. HONG KONG BRANCH</fullName>
                </value>
                <value>
                    <fullName>BANK OF TOKYO MITSUBISHI UFJ LTD. THE (HONG KONG BRANCH)</fullName>
                </value>
                <value>
                    <fullName>BNP PARIBAS (HONG KONG BRANCH)</fullName>
                </value>
                <value>
                    <fullName>CHINA CITIC BANK INTERNATIONAL LIMITED</fullName>
                </value>
                <value>
                    <fullName>CHINA CONSTRUCTION BANK (ASIA) CORPORATION LIMITED</fullName>
                </value>
                <value>
                    <fullName>CHIYU BANKING CORP. LTD.</fullName>
                </value>
                <value>
                    <fullName>CHONG HING BANK LIMITED</fullName>
                </value>
                <value>
                    <fullName>CITIBANK (HONG KONG) LIMITED</fullName>
                </value>
                <value>
                    <fullName>CREDIT AGRICOLE CORPORATE AND INVESTMENT BANK</fullName>
                </value>
                <value>
                    <fullName>DAH SING BANK LTD.</fullName>
                </value>
                <value>
                    <fullName>DBS BANK (HONG KONG) LIMITED</fullName>
                </value>
                <value>
                    <fullName>DBS BANK LTD HONG KONG BRANCH</fullName>
                </value>
                <value>
                    <fullName>DEUTSCHE BANK AG</fullName>
                </value>
                <value>
                    <fullName>FUBON BANK (HONG KONG) LIMITED</fullName>
                </value>
                <value>
                    <fullName>HANG SENG BANK LIMITED</fullName>
                </value>
                <value>
                    <fullName>INDUSTRIAL AND COMMERCIAL BANK OF CHINA (ASIA) LIMITED</fullName>
                </value>
                <value>
                    <fullName>MIZUHO BANK LTD. HONG KONG BRANCH</fullName>
                </value>
                <value>
                    <fullName>NANYANG COMMERCIAL BANK LIMITED</fullName>
                </value>
                <value>
                    <fullName>OCBC WING HANG BANK LTD.</fullName>
                </value>
                <value>
                    <fullName>SHANGHAI COMMERCIAL BANK LIMITED</fullName>
                </value>
                <value>
                    <fullName>SOCIETE GENERALE ASIA LIMITED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Beneficiary_Name_2__c</fullName>
        <label>Beneficiary Name 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Beneficiary_Name__c</fullName>
        <label>Beneficiary Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Branch__c</fullName>
        <label>Branch Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Clone_From_Original__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clone From Original</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Contact_Person_Fax_No__c</fullName>
        <label>Contact Person Fax No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Contact_Person_Tel_No__c</fullName>
        <label>Contact Person Tel No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADK-Angola - Kwanza</fullName>
                </value>
                <value>
                    <fullName>AED-United Arab Emirates - Dirham</fullName>
                </value>
                <value>
                    <fullName>ARP-Argentina - Austral</fullName>
                </value>
                <value>
                    <fullName>ATS-Austria - Shilling</fullName>
                </value>
                <value>
                    <fullName>AUD-Australia - Australian Dollar</fullName>
                </value>
                <value>
                    <fullName>BDT-Bangladesh - Taka</fullName>
                </value>
                <value>
                    <fullName>BEF-Belgium - Franc</fullName>
                </value>
                <value>
                    <fullName>BGL-Bulgaria - Leva</fullName>
                </value>
                <value>
                    <fullName>BIF-Burundi - Franc</fullName>
                </value>
                <value>
                    <fullName>BRC-Brasilia - Cruzeiro</fullName>
                </value>
                <value>
                    <fullName>BSD-Bahamas - Dollar</fullName>
                </value>
                <value>
                    <fullName>CAD-Canada - Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>CHF-Switserland - Swiss Frank</fullName>
                </value>
                <value>
                    <fullName>CLP-Chili - Peso</fullName>
                </value>
                <value>
                    <fullName>CSK-Czechoslovakia - Crown</fullName>
                </value>
                <value>
                    <fullName>CYP-Cyprus - Cyprian Pound</fullName>
                </value>
                <value>
                    <fullName>DEM-Germany - Deutsch Mark</fullName>
                </value>
                <value>
                    <fullName>DKK-Denmark - Danish Crown</fullName>
                </value>
                <value>
                    <fullName>DZD-Algeria - Dinar</fullName>
                </value>
                <value>
                    <fullName>ECS-Ecuador - Sucre</fullName>
                </value>
                <value>
                    <fullName>EGP-Egypt - Egyptian Pound</fullName>
                </value>
                <value>
                    <fullName>ESP-Spain - Spanish Peseta</fullName>
                </value>
                <value>
                    <fullName>ETB-Ethiopia - Birr</fullName>
                </value>
                <value>
                    <fullName>EUR-Euro</fullName>
                </value>
                <value>
                    <fullName>FEC-Foreign Exchange Currency</fullName>
                </value>
                <value>
                    <fullName>FIM-Finland - Finnish Mark</fullName>
                </value>
                <value>
                    <fullName>FRF-France - French Franc</fullName>
                </value>
                <value>
                    <fullName>GBP-U.K. - Pound Sterling</fullName>
                </value>
                <value>
                    <fullName>GRD-Greece - Drachme</fullName>
                </value>
                <value>
                    <fullName>HKD-Hong Kong - Hong Kong Dollar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Email_Address_1__c</fullName>
        <label>Email Address 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Email_Address_2__c</fullName>
        <label>Email Address 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Email_Address_3__c</fullName>
        <label>Email Address 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_IBAN_Code__c</fullName>
        <label>IBAN Code</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Inter_Bank_Address__c</fullName>
        <label>Inter-Bank Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Inter_Bank_Beneficiary_Name__c</fullName>
        <label>Inter-Bank Beneficiary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Inter_Bank_Identifier__c</fullName>
        <inlineHelpText>SWIFT Code / Bank ID</inlineHelpText>
        <label>Inter-Bank Beneficiary Bank Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Inter_Bank_Name__c</fullName>
        <label>Inter-Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Related_Vendor_From_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Vendor From Line</label>
        <referenceTo>ASI_eForm_Vendor_Form_Line_Item__c</referenceTo>
        <relationshipName>Vendor_Form_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_SWIFT_Code__c</fullName>
        <inlineHelpText>System will auto assign a value based on the selected bank if you keep blank</inlineHelpText>
        <label>SWIFT Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Vendor_Form__c</fullName>
        <label>Vendor Form (DO NOT Modify)</label>
        <referenceTo>ASI_eForm_Vendor_Form__c</referenceTo>
        <relationshipLabel>Vendor Bank Information</relationshipLabel>
        <relationshipName>Vendor_Form_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vendor Bank Information</label>
    <nameField>
        <displayFormat>VBI-{000000}</displayFormat>
        <label>Vendor Bank Line Reference No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Bank Information</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_HK_Vendor_Form_Line_Item_Key_Bank</fullName>
        <active>true</active>
        <label>HK Vendor Form Line Item (Key Bank)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_Vendor_Form_Line_Item_Key_Bank_RO</fullName>
        <active>true</active>
        <label>HK Vendor Form Line Item (Key Bank) - RO</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_Vendor_Form_Line_Item_Other_Bank</fullName>
        <active>true</active>
        <label>HK Vendor Form Line Item (Other Bank)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_Vendor_Form_Line_Item_Other_Bank_RO</fullName>
        <active>true</active>
        <label>HK Vendor Form Line Item (Other Bank) RO</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_eForm_HK_Branch_AC_Code_NumberOnly</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS( RecordType.DeveloperName, &apos;ASI_eForm_HK&apos;) &amp;&amp; ISPICKVAL(ASI_eForm_Vendor_Form__r.ASI_eForm_Status__c, &apos;Draft&apos;) &amp;&amp; NOT(ISNUMBER(ASI_eForm_Bank_A_C_Number__c)) &amp;&amp; NOT(ISBLANK(ASI_eForm_Bank_A_C_Number__c))</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Bank_A_C_Number__c</errorDisplayField>
        <errorMessage>Please input number only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_HK_ValidateIBANandSWIFT</fullName>
        <active>false</active>
        <errorConditionFormula>CONTAINS( RecordType.DeveloperName, &apos;ASI_eForm_HK&apos;) &amp;&amp;  ISPICKVAL(ASI_eForm_Vendor_Form__r.ASI_eForm_Status__c, &apos;Draft&apos;) &amp;&amp; ISBLANK(ASI_eForm_IBAN_Code__c) &amp;&amp; ISBLANK(ASI_eForm_SWIFT_Code__c)</errorConditionFormula>
        <errorMessage>Please input either IBAN Code or SWIFT Code or Both</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_OtherBankValidation</fullName>
        <active>false</active>
        <errorConditionFormula>CONTAINS( RecordType.DeveloperName, &apos;ASI_eForm_HK&apos;) &amp;&amp; ISPICKVAL(ASI_eForm_Vendor_Form__r.ASI_eForm_Status__c, &apos;Draft&apos;) &amp;&amp; ISPICKVAL( ASI_eForm_Bank__c, &apos;Other Bank&apos;) &amp;&amp; ISBLANK( ASI_eForm_Bank_Name__c) &amp;&amp;  ISBLANK(ASI_eForm_Bank_Code__c)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Bank__c</errorDisplayField>
        <errorMessage>Please input Bank Code and Bank Name for &quot;Other Bank&quot;</errorMessage>
    </validationRules>
</CustomObject>